--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dev_dependencies:
+  analyzer: ^0.41.1
+  dhttpd: ^3.0.2
   path: ^1.7.0
   pedantic: ^1.9.2
-  analyzer: ^0.41.1
